--- a/README.Rmd
+++ b/README.Rmd
@@ -221,13 +221,14 @@ abide by its terms.
 
 
 
+
 <!-- ALL-CONTRIBUTORS-LIST:START - Do not remove or modify this section -->
 <!-- prettier-ignore-start -->
 <!-- markdownlint-disable -->
 
-This project uses the [`allcontributors` package](https://github.com/ropenscilabs/allcontributors) following the [all-contributors](https://allcontributors.org) specification. Contributions of any kind are welcome!
+All contributions to this project are gratefully acknowledged using the [`allcontributors` package](https://github.com/ropenscilabs/allcontributors) following the [all-contributors](https://allcontributors.org) specification. Contributions of any kind are welcome!
 
-## Code
+### Code
 
 <table>
 
@@ -255,7 +256,7 @@ This project uses the [`allcontributors` package](https://github.com/ropenscilab
 </table>
 
 
-## Issue Authors
+### Issues
 
 <table>
 
