capitalise readme section titles

--- a/README.Rmd
+++ b/README.Rmd
@@ -37,7 +37,7 @@ Markings on paper maps need to be scanned, photographed, or otherwise
 digitised, while maps with screen-based markings need to be saved as
 `.png`-format images.
 
-## installation
+## Installation
 
 `mapscanner` is not (yet) on CRAN. The development version can be installed
 with any of the following options:
@@ -52,7 +52,7 @@ The package can then be loaded for usage in a R session with
 library (mapscanner)
 ```
 
-## usage
+## Usage
 
 The package is designed to enable the following workflow:
 
