--- a/vignettes/mapscanner.Rmd
+++ b/vignettes/mapscanner.Rmd
@@ -129,9 +129,9 @@ the kinds of spatial objects to which these may be converted.
 ## Mapbox API tokens
 
 Map generation with `mapscanner` requires a personal token or key from
-[`mapbox`](https://mapbox.com), which can be obtained by following the links
+[`mapbox`](https://mapbox.com/), which can be obtained by following the links
 from
-[https://docs.mapbox.com/api](https://docs.mapbox.com/api/#access-tokens-and-token-scopes).
+[https://docs.mapbox.com/api/](https://docs.mapbox.com/api/#access-tokens-and-token-scopes/).
 If you already have a token, the easiest way to use it with `mapscanner` is to
 create (or edit) a file `~/.Renviron`, and insert a line,
 
@@ -149,7 +149,7 @@ for your current R session, you may load `mapscanner`, and then run
 
 ## Map generation
 
-Having obtained and set a [`mapbox`](https://mapbox.com) token as described
+Having obtained and set a [`mapbox`](https://mapbox.com/) token as described
 above, the
 [`ms_generate_map()`](https://docs.ropensci.org/mapscanner/reference/ms_generate_map.html)
 function can be used to generate printable maps for a specified bounding box in
@@ -165,7 +165,7 @@ The two generated maps are saved in the current working directory (`getwd()`).
 To save maps in alternative locations, the `mapname` parameter can optionally
 specify paths. To provide finer control over the scales of maps, precise
 bounding boxes can also be submitted. To determine desired bounding boxes, we
-recommend using the ['openstreetmap.org' website](https://openstreetmap.org),
+recommend using the ['openstreetmap.org' website](https://openstreetmap.org/),
 zooming to a desired area, then clicking the "Export" button. A window will
 appear which includes the bounding coordinates of the current screen. Even
 finer control can be gained by clicking beneath this coordinate window on the
@@ -188,7 +188,7 @@ Maps are generated in two formats, because the `.pdf` version will generally
 be the most convenient for printing, while the `png` version should be retained
 as the "master" copy against which to rectify subsequently scanned-in version.
 Behind the scenes, the function downloads a series of vector map tiles from
-[mapbox](https://mapbox.com), and converts them to a `rasterBrick` object from
+[mapbox](https://mapbox.com/), and converts them to a `rasterBrick` object from
 the [`raster` package](https://cran.r-project.org/package=raster). This
 `rasterBrick` object is invisibly returned from the function:
 ```{r chennaiBrick-fakey, eval = FALSE}
