--- a/README.Rmd
+++ b/README.Rmd
@@ -16,11 +16,10 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 [![R build
 status](https://github.com/ropensci/mapscanner/workflows/R-CMD-check/badge.svg)](https://github.com/ropensci/mapscanner/actions?query=workflow%3AR-CMD-check)
-[![Travis build status](https://travis-ci.org/ropensci/mapscanner.svg?branch=master)](https://travis-ci.org/ropensci/mapscanner)
-[![codecov](https://codecov.io/gh/ropensci/mapscanner/branch/master/graph/badge.svg)](https://codecov.io/gh/ropensci/mapscanner)
+[![codecov](https://codecov.io/gh/ropensci/mapscanner/branch/master/graph/badge.svg)](https://app.codecov.io/gh/ropensci/mapscanner)
 [![Project Status: Concept](https://www.repostatus.org/badges/latest/concept.svg)](https://www.repostatus.org/#concept)
 
-[![](https://badges.ropensci.org/330_status.svg)](https://github.com/ropensci/onboarding/issues/330)
+[![](https://badges.ropensci.org/330_status.svg)](https://github.com/ropensci/software-review/issues/330)
 
 <!-- badges: end -->
 
@@ -109,8 +108,8 @@ the kinds of spatial objects to which these may be converted.
 ### Mapbox API tokens
 
 Map generation with `mapscanner` requires a personal token or key from
-[`mapbox`](https://mapbox.com/), which can be obtained by following the links
-from
+[`mapbox`](https://www.mapbox.com/), which can be obtained by following the
+links from
 [https://docs.mapbox.com/api](https://docs.mapbox.com/api/#access-tokens-and-token-scopes/).
 If you already have a token, the easiest way to use it with `mapscanner` is to
 create (or edit) a file `~/.Renviron`, and insert a line,
@@ -127,10 +126,10 @@ for your current R session, you may load `mapscanner`, and then run
 
 ### Map generation
 
-Having obtained and set a [`mapbox`](https://mapbox.com/) token as described
-above, `mapscanner` may then be used to generate maps. The package comes with
-a sample map of Omaha, Nebraska, USA, and one with some red lines drawn on it:
-![](./man/figures/omaha-polygons.png)
+Having obtained and set a [`mapbox`](https://www.mapbox.com/) token as
+described above, `mapscanner` may then be used to generate maps. The package
+comes with a sample map of Omaha, Nebraska, USA, and one with some red lines
+drawn on it: ![](./man/figures/omaha-polygons.png)
 
 That's just a standard `png` image with no notion of geographical coordinates.
 The original map was generated with
@@ -226,7 +225,7 @@ project, you agree to abide by its terms.
 <!-- prettier-ignore-start -->
 <!-- markdownlint-disable -->
 
-All contributions to this project are gratefully acknowledged using the [`allcontributors` package](https://github.com/ropenscilabs/allcontributors) following the [all-contributors](https://allcontributors.org) specification. Contributions of any kind are welcome!
+All contributions to this project are gratefully acknowledged using the [`allcontributors` package](https://github.com/ropenscilabs/allcontributors) following the [all-contributors](https://allcontributors.org/) specification. Contributions of any kind are welcome!
 
 ### Code
 
