--- a/vignettes/mapstyles.Rmd
+++ b/vignettes/mapstyles.Rmd
@@ -3,11 +3,7 @@ title: "mapscanner styles"
 author: "Mark Padgham"
 date: "`r Sys.Date()`"
 output: 
-    html_document:
-        toc: true
-        toc_float: true
-        number_sections: false
-        theme: flatly
+    html_document
 vignette: >
   %\VignetteIndexEntry{mapscanner styles}
   %\VignetteEngine{knitr::rmarkdown}
