update install instructions; closes #46

--- a/README.Rmd
+++ b/README.Rmd
@@ -41,14 +41,20 @@ digitised, while maps with screen-based markings need to be saved as
 
 ## Installation
 
-`mapscanner` is not (yet) on CRAN. The development version can be installed
-with any of the following options:
-```{r install, eval = FALSE}
-remotes::install_github("ropensci/mapscanner")
-remotes::install_git("https://git.sr.ht/~mpadge/mapscanner")
-remotes::install_bitbucket("mpadge/mapscanner")
-remotes::install_gitlab("mpadge/mapscanner")
+The current stable version can be installed from CRAN with:
+```{r cran-inst, eval = FALSE}
+install.packages ("mapscanner")
 ```
+
+Alternatively, the development version can be installed via [rOpenSci's
+r-universe](https://ropensci.r-universe.dev/) by running the following prior to
+calling `install.packages()`:
+```{r r-univ, eval = FALSE}
+options(repos = c(
+                  ropensci = 'https://ropensci.r-universe.dev',
+                  CRAN = 'https://cloud.r-project.org'))
+```
+
 The package can then be loaded for usage in a R session with
 ```{r library}
 library (mapscanner)
