--- a/README.Rmd
+++ b/README.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# mapscanner <a href='https://docs.ropensci.org/mapscanner/'><img src='man/figures/mapscanner.png' align="right" height=210 width=182/></a>
+# mapscanner <a href='https://docs.ropensci.org/mapscanner/'><img src='man/figures/logo.png' align="right" height=210 width=182/></a>
 
 <!-- badges: start -->
 [![R build
