--- a/vignettes/mapscanner.Rmd
+++ b/vignettes/mapscanner.Rmd
@@ -182,15 +182,17 @@ message ("Successfully generated 'chennai.pdf' and 'chennai.png'")
 x
 ```
 ```{r chennaiBrick, echo = FALSE}
-x <- paste0 ("class      : RasterBrick\n",
-             "dimensions : 1147, 562, 644614, 3  (nrow, ncol, ncell, nlayers)\n",
-             "resolution : 38.21851, 38.21851  (x, y)\n",
-             "extent     : 8921157, 8942635, 1442787, 1486624  (xmin, xmax, ymin, ymax)\n",
-             "crs        : +proj=merc +a=6378137 +b=6378137 +lat_ts=0 +lon_0=0 +x_0=0 +y_0=0 +k=1 +units=m +nadgrids=@null +wktext +no_defs\n",
-             "source     : memory\n",
-             "names      : index_1.1, index_1.2, index_1.3\n",
-             "min values :       107,       107,       107\n",
-             "max values :       254,       254,       254")
+x <- paste0 (
+    "class      : RasterBrick\n",
+    "dimensions : 1147, 562, 644614, 3  (nrow, ncol, ncell, nlayers)\n",
+    "resolution : 38.21851, 38.21851  (x, y)\n",
+    "extent     : 8921157, 8942635, 1442787, 1486624  (xmin, xmax, ymin, ymax)\n",
+    "crs        : +proj=merc +a=6378137 +b=6378137 +lat_ts=0 +lon_0=0 +x_0=0 +y_0=0 +k=1 +units=m +nadgrids=@null +wktext +no_defs\n",
+    "source     : memory\n",
+    "names      : index_1.1, index_1.2, index_1.3\n",
+    "min values :       107,       107,       107\n",
+    "max values :       254,       254,       254"
+)
 message (x)
 ```
 This `rasterBrick` object contains raster information for the three colour
@@ -254,14 +256,15 @@ xy
 ```
 ```{r rectify-output, echo = FALSE}
 m <- c (
-"Simple feature collection with 2 features and 0 fields",
-"Geometry type: POLYGON",
-"Dimension:     XY",
-"Bounding box:  xmin: -96.11801 ymin: 41.26638 xmax: -96.02722 ymax: 41.30108",
-"Geodetic CRS:  WGS 84",
-"                        geometry",
-"1 POLYGON ((-96.10692 41.2684...",
-"2 POLYGON ((-96.0276 41.2964,...")
+    "Simple feature collection with 2 features and 0 fields",
+    "Geometry type: POLYGON",
+    "Dimension:     XY",
+    "Bounding box:  xmin: -96.11801 ymin: 41.26638 xmax: -96.02722 ymax: 41.30108",
+    "Geodetic CRS:  WGS 84",
+    "                        geometry",
+    "1 POLYGON ((-96.10692 41.2684...",
+    "2 POLYGON ((-96.0276 41.2964,..."
+)
 m <- paste0 (m, collapse = "\n")
 message (m)
 ```
@@ -271,17 +274,18 @@ The result of
 can be plotted using any standard option for plotting spatial data, such as
 through online mapping packages such as `mapview`:
 ```{r mapshot-hulls, eval = FALSE, echo = FALSE}
-xy$id <- seq (nrow (xy))
-if (!file.exists ("mapshot-polys.png"))
-{
+xy$id <- seq_len (nrow (xy))
+if (!file.exists ("mapshot-polys.png")) {
     x <- mapview::mapview (xy)
-    mapview::mapshot (x, file = "mapshot-hulls.png",
-                      remove_controls = c ("layersControl", "zoomControl"),
-                      vwidth = vwidth, vheight = vheight)
+    mapview::mapshot (x,
+        file = "mapshot-hulls.png",
+        remove_controls = c ("layersControl", "zoomControl"),
+        vwidth = vwidth, vheight = vheight
+    )
 }
 ```
 ```{r mapview-fakey, eval = FALSE}
-xy$id <- seq (nrow (xy))
+xy$id <- seq_len (nrow (xy))
 mapview::mapview (xy)
 ```
 
@@ -290,7 +294,7 @@ mapview::mapview (xy)
 -->
 ```{r mapshot-hulls-png, echo = FALSE, out.width = "75%"}
 knitr::include_graphics ("./mapshot-hulls.png")
-#plot (xy)
+# plot (xy)
 ```
 
 
@@ -338,17 +342,18 @@ f_mod <- system.file ("extdata", "omaha-polygons.png", package = "mapscanner")
 xy <- ms_rectify_map (f_orig, f_mod, type = "polygons", quiet = TRUE)
 ```
 ```{r mapview-polys, eval = FALSE, echo = FALSE}
-xy$id <- seq (nrow (xy))
-if (!file.exists ("mapshot-polys.png"))
-{
+xy$id <- seq_len (nrow (xy))
+if (!file.exists ("mapshot-polys.png")) {
     x <- mapview::mapview (xy)
-    mapview::mapshot (x, file = "mapshot-polys.png",
-                      remove_controls = c ("layersControl", "zoomControl"),
-                      vwidth = vwidth, vheight = vheight)
+    mapview::mapshot (x,
+        file = "mapshot-polys.png",
+        remove_controls = c ("layersControl", "zoomControl"),
+        vwidth = vwidth, vheight = vheight
+    )
 }
 ```
 ```{r mapview-polys-fakey, eval = FALSE}
-xy$id <- seq (nrow (xy))
+xy$id <- seq_len (nrow (xy))
 mapview::mapview (xy)
 ```
 
@@ -357,7 +362,7 @@ mapview::mapview (xy)
 -->
 ```{r mapshot-polys-png, echo = FALSE, out.width = "75%"}
 knitr::include_graphics ("./mapshot-polys.png")
-#plot (xy)
+# plot (xy)
 ```
 
 
@@ -368,17 +373,18 @@ f_mod <- system.file ("extdata", "omaha-polygons.png", package = "mapscanner")
 xy <- ms_rectify_map (f_orig, f_mod, type = "points", quiet = TRUE)
 ```
 ```{r mapview-points, eval = FALSE, echo = FALSE}
-xy$id <- seq (nrow (xy))
-if (!file.exists ("mapshot-points.png"))
-{
+xy$id <- seq_len (nrow (xy))
+if (!file.exists ("mapshot-points.png")) {
     x <- mapview::mapview (xy)
-    mapview::mapshot (x, file = "mapshot-points.png",
-                      remove_controls = c ("layersControl", "zoomControl"),
-                      vwidth = vwidth, vheight = vheight)
+    mapview::mapshot (x,
+        file = "mapshot-points.png",
+        remove_controls = c ("layersControl", "zoomControl"),
+        vwidth = vwidth, vheight = vheight
+    )
 }
 ```
 ```{r mapview-points-fakey, eval = FALSE}
-xy$id <- seq (nrow (xy))
+xy$id <- seq_len (nrow (xy))
 mapview::mapview (xy)
 ```
 
@@ -387,7 +393,7 @@ mapview::mapview (xy)
 -->
 ```{r mapshot-points-png, echo = FALSE, out.width = "75%"}
 knitr::include_graphics ("./mapshot-points.png")
-#plot (xy)
+# plot (xy)
 ```
 
 
@@ -410,11 +416,11 @@ polygons as convex hulls surrounding random points.
 ```{r random-polys-fakey, eval = FALSE}
 n <- 5 # number of polygons
 polys <- lapply (seq (n), function (i) {
-                     nxy <- 20 # number of points used to generate hull
-                     xy <- matrix (runif (2 * nxy), ncol = 2)
-                     h <- chull (xy)
-                     sf::st_polygon (list (xy [c (h, h [1]), ]))
-            })
+    nxy <- 20 # number of points used to generate hull
+    xy <- matrix (runif (2 * nxy), ncol = 2)
+    h <- chull (xy)
+    sf::st_polygon (list (xy [c (h, h [1]), ]))
+})
 polys <- sf::st_sf (n = seq (n), geometry = polys)
 ```
 The `polys` object is then a Simple Features
@@ -428,27 +434,37 @@ polys$type <- "raw polygons"
 aggr$type <- "aggregated polygons"
 polys <- rbind (polys, aggr)
 # Convert type to factor to order facets:
-polys$type <- factor (polys$type, levels = c ("raw polygons", "aggregated polygons"))
+polys$type <- factor (
+    polys$type,
+    levels = c ("raw polygons", "aggregated polygons")
+)
 library (ggplot2)
-ggplot (polys, aes (fill = n)) + geom_sf () + facet_wrap (~type)
+ggplot (polys, aes (fill = n)) +
+    geom_sf () +
+    facet_wrap (~type)
 ```
 ```{r random-polys, echo = FALSE, eval = TRUE}
 set.seed (1)
 n <- 5 # number of polygons
 polys <- lapply (seq (n), function (i) {
-                     nxy <- 20 # number of points used to generate hull
-                     xy <- matrix (runif (2 * nxy), ncol = 2)
-                     h <- chull (xy)
-                     sf::st_polygon (list (xy [c (h, h [1]), ]))
-            })
+    nxy <- 20 # number of points used to generate hull
+    xy <- matrix (runif (2 * nxy), ncol = 2)
+    h <- chull (xy)
+    sf::st_polygon (list (xy [c (h, h [1]), ]))
+})
 polys <- sf::st_sf (n = seq (n), geometry = polys)
 aggr <- ms_aggregate_polys (polys)
 polys$type <- "raw polygons"
 aggr$type <- "aggregated polygons"
 polys <- rbind (polys, aggr)
-polys$type <- factor (polys$type, levels = c ("raw polygons", "aggregated polygons"))
+polys$type <- factor (
+    polys$type,
+    levels = c ("raw polygons", "aggregated polygons")
+)
 theme_set (theme_minimal ())
-ggplot (polys, aes (fill = n)) + geom_sf () + facet_wrap (~type)
+ggplot (polys, aes (fill = n)) +
+    geom_sf () +
+    facet_wrap (~type)
 ```
 
 The left panel of that figure shows the random polygons in raw form
@@ -459,14 +475,16 @@ contains polygons ordered by level of aggregation (`n`), so the first entirely
 encloses the second; the second encloses the third; and so on. Particular
 contours can then be directly selected by filtering for desired values of `n`:
 ```{r aggr13, eval = TRUE}
-ggplot (aggr [aggr$n %in% c (1, 3, 5), ], aes (fill = n)) + geom_sf ()
+ggplot (aggr [aggr$n %in% c (1, 3, 5), ], aes (fill = n)) +
+    geom_sf ()
 ```
 
 Polygon aggregation enables many interesting analyses to be performed, such as
 relationships between aggregation level and area:
 ```{r aggr-area, eval = TRUE}
 aggr$area <- sf::st_area (aggr)
-ggplot (aggr, aes (x = n, y = area)) + geom_line (size = 2)
+ggplot (aggr, aes (x = n, y = area)) +
+    geom_line (size = 2)
 ```
 
 That result is of course (roughly) linear, because it was derived from random
@@ -501,9 +519,11 @@ in the `.pdf` as standard meta information accessible in **R** like this:
 pdftools::pdf_info ("chennai.pdf")$keys
 ```
 ```{r pdfinfo, echo = FALSE}
-x <- list ("Title" = "EX8921118.44521949+1442748.9088827+8942673.68719591+1486623.76311839",
-           "Producer" = "R 4.0.0",
-           "Creator" = "R")
+x <- list (
+    "Title" = "EX8921118.44521949+1442748.9088827+8942673.68719591+1486623.76311839",
+    "Producer" = "R 4.0.0",
+    "Creator" = "R"
+)
 x
 ```
 
