--- a/README.Rmd
+++ b/README.Rmd
@@ -5,10 +5,10 @@ output: github_document
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
 ```{r, include = FALSE}
-knitr::opts_chunk$set(
-  collapse = TRUE,
-  comment = "#>",
-  out.width = "100%"
+knitr::opts_chunk$set (
+    collapse = TRUE,
+    comment = "#>",
+    out.width = "100%"
 )
 ```
 
@@ -50,9 +50,10 @@ Alternatively, the development version can be installed via [rOpenSci's
 r-universe](https://ropensci.r-universe.dev/) by running the following prior to
 calling `install.packages()`:
 ```{r r-univ, eval = FALSE}
-options(repos = c(
-                  ropensci = 'https://ropensci.r-universe.dev',
-                  CRAN = 'https://cloud.r-project.org'))
+options (repos = c (
+    ropensci = "https://ropensci.r-universe.dev",
+    CRAN = "https://cloud.r-project.org"
+))
 ```
 
 The package can then be loaded for usage in a R session with
@@ -144,13 +145,17 @@ That's just a standard `png` image with no notion of geographical coordinates.
 The original map was generated with
 
 ```{r omaha-fakey, eval = FALSE}
-bbox <- rbind (c (-96.12923, -96.01011),
-               c (41.26145, 41.32220)) # portion of omaha
+bbox <- rbind (
+    c (-96.12923, -96.01011),
+    c (41.26145, 41.32220)
+) # portion of omaha
 ms_generate_map (bbox, max_tiles = 16L, mapname = "omaha")
 ```
 ```{r omaha, echo = FALSE}
-bbox <- rbind (c (-96.12923, -96.01011),
-               c (41.26145, 41.32220))
+bbox <- rbind (
+    c (-96.12923, -96.01011),
+    c (41.26145, 41.32220)
+)
 message ("Successfully generated 'omaha.pdf' and 'omaha.png'")
 ```
 As indicated, the function generates a map in both `.pdf` and `.png` formats.
@@ -191,21 +196,27 @@ a mapbox token:
 library (mapdeck)
 set_token (Sys.getenv ("<my_mapbox_token>"))
 mapdeck () %>%
-    add_polygon (res, fill_colour = "#ffff00cc",
-                 stroke_colour = "#ff0000", stroke_width = 20)
+    add_polygon (res,
+        fill_colour = "#ffff00cc",
+        stroke_colour = "#ff0000", stroke_width = 20
+    )
 ```
 
 
 ```{r leaflet, echo = FALSE, eval = FALSE}
-library(leaflet)
+library (leaflet)
 
 leaflet (res) %>%
-    addPolygons (color = "#FF1111", weight = 1, opacity = 1.0,
-                 fillOpacity = 0.5) %>%
+    addPolygons (
+        color = "#FF1111", weight = 1, opacity = 1.0,
+        fillOpacity = 0.5
+    ) %>%
     addProviderTiles ("CartoDB.Positron") %>%
-    setView (lng = mean (bbox [1, ]),
-             lat = mean (bbox [2, ]),
-             zoom = 12)
+    setView (
+        lng = mean (bbox [1, ]),
+        lat = mean (bbox [2, ]),
+        zoom = 12
+    )
 ```
 
 ![](man/figures/leaflet-1.png)
